Bug 1454360 - Use "arrowscrollbox" in the "popup-scrollbars" binding. r=NeilDeakin
This prepares this binding for the unification with the "popup" binding, and removes the last consumer of the scrollByIndex method of XULScrollElement.

Because some code paths in "arrowscrollbox" are optimized using requestAnimationFrame, the related scrolling tests are now asynchronous.

Differential Revision: https://phabricator.services.mozilla.com/D15276

UltraBlame original commit: 24b9b8cb6c615c78895f5007f4f81a06dbe5df06

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -3222,6 +3222,101 @@ noaccel
 )
 ;
 }
+menulist
+>
+menupopup
+>
+.
+popup
+-
+internal
+-
+box
+>
+.
+scrollbutton
+-
+up
+menulist
+>
+menupopup
+>
+.
+popup
+-
+internal
+-
+box
+>
+.
+arrowscrollbox
+-
+overflow
+-
+start
+-
+indicator
+menulist
+>
+menupopup
+>
+.
+popup
+-
+internal
+-
+box
+>
+.
+arrowscrollbox
+-
+overflow
+-
+end
+-
+indicator
+menulist
+>
+menupopup
+>
+.
+popup
+-
+internal
+-
+box
+>
+.
+scrollbutton
+-
+down
+{
+display
+:
+none
+;
+}
+menulist
+>
+menupopup
+>
+.
+popup
+-
+internal
+-
+box
+>
+.
+arrowscrollbox
+-
+scrollbox
+{
+overflow
+:
+auto
+;
+}
 dropmarker
 >
 .
